<resources>
    <string name="app_name">HappyBuyer</string>

    <!-- Home -->
    <string name="home_search_text">찾는 상품이 뭐예요?</string>
    <string name="home_category_more_btn_text">모든 카테고리 보기</string>
    <string name="home_event_title">행사 상품 추천</string>
    <string name="home_event_more_btn_text">더보기</string>
    <string name="home_popular_title">인기 상품 추천</string>

    <!-- Wished -->


    <!-- Order Detail -->
    <string name="order_detail_id_title">주문번호</string>
    <string name="order_detail_id">0</string>
    <string name="order_detail_status">주문상태</string>
    <string name="order_detail_date">(2000-00-00 00:00:00)</string>
    <string name="order_detail_price_zero">0</string>
    <string name="order_detail_price_sub_text">원</string>
    <string name="order_detail_original_price_title">상품금액</string>
    <string name="order_detail_event_price_title">상품할인금액</string>
    <string name="order_detail_shipping_price_title">배송비</string>
    <string name="order_detail_be_paid_price_title">최종 결제금액</string>
    <string name="order_detail_payment_title">결제수단</string>
    <string name="order_detail_payment_method_cash">만나서 현금결제</string>
    <string name="order_detail_payment_method_card">만나서 카드결제</string>
    <string name="order_detail_address_title">배달정보</string>
    <string name="order_detail_address_receiver">받으실 분</string>
    <string name="order_detail_address_phone">휴대폰</string>
    <string name="order_detail_address">주소</string>
    <string name="order_detail_requirement_title">배달 요청사항</string>
    <string name="order_detail_point_title">포인트 번호</string>
    <string name="order_detail_defective_handling_method_title">결품발생 시 처리 방법</string>
    <string name="order_detail_defective_handling_method_option_1">해당 상품 제외 후 배달</string>
    <string name="order_detail_defective_handling_method_option_2">주문 전체 취소</string>

    <!-- Order Success -->
    <string name="order_success_text_1">주문이 완료되었습니다.</string>
    <string name="order_success_text_2">감사합니다 :)</string>
    <string name="order_success_be_paid_price">결제금액</string>
    <string name="order_success_price_zero">0</string>
    <string name="order_success_price_sub_text">원</string>
    <string name="order_success_sub_text_1">· [주문접수] 상태일 때 주문내역 상세페이지에서 주문 취소가 가능합니다.</string>
    <string name="order_success_sub_text_2">· 주문 / 배달 및 기타 문의가 있을 경우, 마트로 문의주시면 신속히 해결해드리겠습니다.</string>
    <string name="order_success_detail_btn_text">주문 상세보기</string>
    <string name="order_success_close_btn_text">쇼핑 계속하기</string>

    <!-- Product -->
    <string name="product_name_text">상품이름</string>
    <string name="product_price_text">0</string>
    <string name="product_price_sub_text">원</string>
    <string name="product_event_percent_text">0</string>
    <string name="product_event_percent_sub_text">%</string>
    <string name="product_des_title">상품정보</string>
    <string name="product_des_text">든든하게 구비해 두는 김치, 종가집으로 선택해 보세요. 이번에는 기본 반ㅇ찬으로 제격인 포기김치를 준비했어요. 소금으로 앎작게 절인 국산 배추를 종가집만의 양념에 맛있게 버무려 주었지요. 국산 농산물만을 사용해 깔끔하게 담궜기에 더욱 만족스럽답니다. 먹기 좋은 크리골 썰어 밥 반찬은 물론이고, 찌개 또는 볶음밥 요리에 두루 활용해 보세요.</string>
    <string name="product_delivery_title">배송구분</string>
    <string name="product_delivery_text">5만원 이상 무료배송</string>
    <string name="product_unit_title">판매단위</string>
    <string name="product_unit_text">1개</string>
    <string name="product_volume_title">중량/용량</string>
    <string name="product_volume_text">0g</string>
    <string name="product_purchase_btn_text">구매하기</string>
    <string name="product_count_text">1</string>
    <string name="product_total_price_sub_text_1">총 합계</string>
    <string name="product_basket_btn_text">-원 장바구니 담기</string>

    <!-- Account -->
    <string name="account_user_nickname_text">닉네임</string>
    <string name="account_user_nickname_sub_text">님, 안녕하세요 :)</string>
    <string name="account_address_text">배송지 관리</string>
    <string name="account_inquiry_text">문의하기</string>
    <string name="account_profile_title">프로필 관리</string>
    <string name="account_profile_nickname_title">닉네임</string>
    <string name="account_profile_nickname_text">-</string>
    <string name="account_profile_point_title">포인트 번호</string>
    <string name="account_profile_point_text">-</string>
    <string name="account_profile_phone_title">휴대폰 번호</string>
    <string name="account_profile_phone_text">-</string>
    <string name="account_notification_title">알림 설정</string>
    <string name="account_notification_get_title">알림 받기</string>
    <string name="account_etc_title">기타</string>
    <string name="account_etc_withdrawal_text">회원 탈퇴</string>
    <string name="account_etc_logout_text">로그아웃</string>
    <string name="account_etc_logout_message">로그아웃하시겠습니까?</string>
    <string name="account_etc_logout_cancel_btn_text">닫기</string>
    <string name="account_etc_logout_confirm_btn_text">확인</string>
    <string name="account_etc_withdrawal_message">정말 회원탈퇴를 하시겠습니까?</string>
    <string name="account_etc_withdrawal_cancel_btn_text">닫기</string>
    <string name="account_etc_withdrawal_confirm_btn_text">확인</string>

    <!-- Update -->
    <string name="update_nickname_title">닉네임</string>
    <string name="update_nickname_btn_text">저장</string>
    <string name="update_nickname_helper_text">최대 10글자까지 입력 가능합니다.</string>
    <string name="update_point_title">포인트 번호</string>
    <string name="update_point_btn_text">저장</string>
    <string name="update_point_helper_text">포인트 적립에 사용할 핸드폰 번호를 입력해주세요.</string>



    <!-- HappyBuyer wished view -->
    <string name="wished_empty_text">자주 찾는 상품을 찜 해보세요.</string>
    <string name="wished_item_count_sub_text_1">전체</string>
    <string name="wished_item_count_sub_text_2">개</string>
    <string name="wished_item_count_text">0</string>

    <!-- HappyBuyer wished recycler item -->
    <string name="wished_item_name">상품 이름</string>
    <string name="wished_item_delete_btn">삭제</string>
    <string name="wished_item_basket_btn">담기</string>
    <string name="wished_item_price">0</string>
    <string name="wished_item_price_sub_text">원</string>
    <string name="wished_item_percent">%</string>
    <string name="wished_item_image_des">상품 이미지</string>

    <!-- HappyBuyer order view -->


    <!-- HappyBuyer product strings -->
    <string name="product_price_sub">원</string>

    <!-- HappyBuyer menu strings -->
    <string name="basket">장바구니</string>

    <!-- HappyBuyer home page strings -->
    <string name="search_hint">찾는 상품이 뭐예요?</string>

    <!-- HappyBuyer search page strings -->
    <string name="search_hint_in_search">검색어를 입력해주세요.</string>
    <string name="recent_search_title">최근 검색어</string>
    <string name="recent_search_delete">모두 지우기</string>
    <string name="result_empty">검색된 상품이 없습니다.</string>
    <string name="result_item_count">총 0개</string>
    <string name="result_item_sort_by">추천순</string>

    <!-- HappyBuyer basket page strings -->
    <string name="basket_title">장바구니</string>
    <string name="basket_address">배송 정보를 입력해주세요.</string>
    <string name="basket_checkbox">전체선택</string>
    <string name="basket_delete">선택삭제</string>
    <string name="basket_price_sub">원</string>
    <string name="basket_price_zero">0</string>
    <string name="basket_empty">장바구니에 담긴 상품이 없습니다.</string>

    <!-- HappyBuyer address page strings -->
    <string name="address_title">배송지 관리</string>

</resources>