<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgColorWhite"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/wishedItemImage"
        android:layout_width="110dp"
        android:layout_height="128dp"
        android:contentDescription="@string/wished_item_image_des"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ic_launcher" />

    <RelativeLayout
        android:id="@+id/wishedItemInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/wishedItemName"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:includeFontPadding="false"
            android:text="@string/wished_item_name" />

        <LinearLayout
            android:id="@+id/wishedItemPriceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wishedItemName"
            android:layout_marginTop="4dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/wishedItemEventPriceContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wishedItemEventPercent"
                    style="@style/TextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/wished_item_price"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wishedItemEventPercentSubText"
                    style="@style/TextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/wished_item_percent"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wishedItemEventPrice"
                    style="@style/NumberTextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:includeFontPadding="false"
                    android:text="@string/wished_item_price"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wishedItemEventPriceSubText"
                    style="@style/TextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/wished_item_price_sub_text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wishedItemOriginalPriceContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wishedItemPrice"
                    style="@style/NumberTextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/wished_item_price"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wishedItemPriceSubText"
                    style="@style/TextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/wished_item_price_sub_text"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wishedItemBtnContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/wishedDeleteBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/wished_item_delete_btn"
                android:textColor="@color/fontColorBlack" />

            <Button
                android:id="@+id/wishedBasketBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/wished_item_basket_btn"
                android:textColor="@color/hbPrimaryDarkColor"
                app:icon="@drawable/ic_shopping_cart_black_18"
                app:iconGravity="textStart"
                app:iconTint="@color/hbPrimaryDarkColor"
                app:strokeColor="@color/hbPrimaryDarkColor" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>