<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/wishedItemCountContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/wishedItemCountSubText1"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/wished_item_count_sub_text_1" />

        <TextView
            android:id="@+id/wishedItemCount"
            style="@style/NumberTextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:includeFontPadding="false"
            android:text="@string/wished_item_count_text" />

        <TextView
            android:id="@+id/wishedItemCountSubText2"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/wished_item_count_sub_text_2" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wishedRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/wishedEmptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColorWhite"
        android:visibility="gone">

        <ImageView
            android:id="@+id/wishedEmptyImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/touch_to_heart" />

        <TextView
            android:id="@+id/wishedEmptyText"
            style="@style/TextView.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wishedEmptyImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/wished_empty_text"
            android:textColor="@color/fontColorLightGray"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wishedLoadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/wishedLoadingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/bgColorWhite"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            app:lottie_speed="1" />
    </RelativeLayout>

</LinearLayout>